--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,5 +1,8 @@
 <div class="row">
-  <div class="co md 12">
-    <app-product-list></app-product-list>
+  <div class="col-md-3">
+    <app-cart></app-cart>
+  </div>
+  <div class="col-md-9">
+    <router-outlet></router-outlet>
   </div>
 </div>
