--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -3,6 +3,7 @@
     <app-cart></app-cart>
   </div>
   <div class="col-md-9">
+    <app-categories></app-categories>
     <router-outlet></router-outlet>
   </div>
 </div>
