--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,7 +5,7 @@
       </div>
       <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-              <li routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"><a routerLink="/search">Search</a></li>
+              <li routerLinkActive="active"><a routerLink="/search">Search</a></li>
               <li routerLinkActive="active"><a routerLink="/shopping-main">Products</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
