--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -1,4 +1,4 @@
-<div class="row" *ngIf="currentCategory">
+<div class="row" *ngIf="currentCategory && currentCategory.productList">
   <div class="col-md-3" *ngFor="let product of currentCategory.productList">
     <a class="list-group-item clearfix styleList" style="cursor:pointer">
       <p>name: {{product.name}}</p>
