change cart part 2

--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,21 +1,18 @@
-<mat-drawer-container autosize>
-  <mat-drawer #drawer class="example-sidenav" mode="side">
-    <div class="col-md-3">
+<mat-drawer-container autosize class="containerStyle">
+  <mat-drawer #drawer class="cartPosition" mode="side">
+    <div class="col-md-12">
       <app-cart></app-cart>
     </div>
   </mat-drawer>
-  <button type="button" class="btn btn-default" mat-button (click)="drawer.toggle()">Toggle sidenav</button>
-  <div class="headerPosition">
-    <!-- <div class="headerPosition"> -->
-    <app-categories></app-categories>
-    <router-outlet></router-outlet>
-    <!-- </div> -->
+  <div class="contentPageStyle">
+    <div class="headerPosition col-md-12">
+      <div class="navigation-container">
+        <button type="button" class="btn btn-default side-btn" mat-button (click)="drawer.toggle()">
+          <span class="glyphicon glyphicon-menu-right"></span> Cart</button>
+        <app-categories class="categories"></app-categories>
+      </div>
+
+      <router-outlet></router-outlet>
+    </div>
   </div>
 </mat-drawer-container>
-
-<!-- <app-toggle-side-cart></app-toggle-side-cart> -->
-<!-- <p>Auto-resizing sidenav</p>
-  <p *ngIf="showFiller">Lorem, ipsum dolor sit amet consectetur.</p>
-  <button (click)="showFiller = !showFiller" mat-raised-button>
-    Toggle extra text
-  </button> -->
