--- a/src/app/products/products.component.css
+++ b/src/app/products/products.component.css
@@ -1,3 +1,27 @@
 .headerPosition{
     float: right;
 }
+.cartPosition{
+    width: 20%;
+}
+.containerStyle{
+    overflow: hidden;
+    min-height: 500px;
+}
+.contentPageStyle{
+    overflow: hidden;
+}
+
+.navigation-container{
+    display: flex;
+    flex-direction: row;
+}
+
+.categories{
+    flex-grow: 2;
+}
+
+.side-btn{
+    height: 52px;
+    margin-right: 4px;
+}
