dialog last part + product service part 1

--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -8,5 +8,9 @@
       </div>
     </a>
   </div>
-  <button mat-raised-button (click)="openDialog()">Pick one</button>
+  <div class="col-md-2">
+    <a class="list-group-item clearfix styleList" style="cursor:pointer; height: 132px" mat-raised-button (click)="openDialog()">
+      <h2>Add <span style="font-size: 20px" class="glyphicon glyphicon-plus"></span> Product</h2>
+    </a>
+  </div>
 </div>
