adding product to category database

--- a/src/app/products/product-list/add-product-list.component.html
+++ b/src/app/products/product-list/add-product-list.component.html
@@ -37,8 +37,9 @@
                 <div *ngIf="categories">
                   <label for="category">Categories</label>
                   <select formControlName="category" id="category" class="form-control">
-                    <option value="" disabled="true" selected>Choose Category</option>
+                    <option value="" disabled="true">Choose Category</option>
                     <option *ngFor="let category of categories"
+                    [selected]="category.name === current.name"
                     [value]="category._id" >{{ category.name }}</option>
                   </select>
                 </div>
