--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -2,7 +2,10 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <router-outlet></router-outlet>
+      <!-- <app-login></app-login> -->
+      <ng-container>
+        <router-outlet></router-outlet>
+      </ng-container>
     </div>
   </div>
 </div>
