--- a/client/src/app/products/product-list/product-list.component.html
+++ b/client/src/app/products/product-list/product-list.component.html
@@ -1,6 +1,6 @@
 <div class="row" *ngIf="currentCategory && currentCategory.productList">
   <div class="col-md-2" *ngFor="let product of currentCategory.productList">
-    <a class="list-group-item clearfix styleList" style="cursor:pointer">
+    <a class="list-group-item clearfix styleList" style="cursor:pointer" (click)="openAddItemToCart(product)">
       <p>name: {{product.name}}</p>
       <p>price: {{product.price}}</p>
       <div class="pull-right">
@@ -8,7 +8,7 @@
       </div>
     </a>
   </div>
-  <div class="col-md-2">
+  <div class="col-md-2" *ngIf="loggedUser.role == 'admin'">
     <a class="list-group-item clearfix styleList" style="cursor:pointer; height: 132px" mat-raised-button (click)="openDialog()">
       <h2>Add <span style="font-size: 20px" class="glyphicon glyphicon-plus"></span> Product</h2>
     </a>
