--- a/client/src/app/products/product-list/product-list.component.css
+++ b/client/src/app/products/product-list/product-list.component.css
@@ -5,3 +5,17 @@
 .imgStyle{
     max-height: 180px;
 }
+.editBtnStyle{
+    opacity: 0;
+    margin: 5px;
+    height: 20%;
+    width: 18%;
+    bottom: 0;
+    left: 0;
+    padding: 2px;
+    position: absolute;
+    transition: opacity 0.2s ease;    
+}
+.styleList:hover .editBtnStyle{
+    opacity: 1;
+}
