--- a/client/src/app/products/product-list/add-product-list.component.html
+++ b/client/src/app/products/product-list/add-product-list.component.html
@@ -46,6 +46,7 @@
           </div>
           <div class="row">
             <div class="col-xs-12">
+              <p>{{errorMsg}}</p>
               <button type="sumbit" class="btn btn-success" [disabled]="!addingProductsForm.valid">Save</button>
               <button type="button" class="btn btn-danger" (click)="onNoClick()">Cancel</button>
             </div>
