adding order page

--- a/client/src/app/login/register/register.component.html
+++ b/client/src/app/login/register/register.component.html
@@ -30,7 +30,7 @@
                 </div>
                 <div class="col-md-5">
                     <button type="button" class="btn btn-primary" (click)="onNext()"
-                     [disabled]="confPass != pass || confPass == null || pass == null && emailMessage != 'email is taken'">Next</button>
+                     [disabled]="confPass != pass || confPass == null || pass == null || emailMessage == 'Email is taken'">Next</button>
                 </div>
                 <div class="col-md-7">
                     <div>
