--- a/client/src/app/products/product-list/product-list.component.html
+++ b/client/src/app/products/product-list/product-list.component.html
@@ -2,7 +2,7 @@
   <div class="col-md-2" *ngFor="let product of currentCategory.productList">
     <a class="list-group-item clearfix styleList" style="cursor:pointer" (click)="openAddItemToCart(product,false)">
       <p>name: {{product.name}}</p>
-      <p>price: {{product.price}}</p>
+      <p>price: {{product.price}}$</p>
       <div class="pull-right">
         <img src="{{product.imagePath}}" alt="{{product.name}}" class="img-responsive" style="max-height: 50px;">
       </div>
