--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -15,6 +15,7 @@
                     </div>
                 </div>
                 <div class="col-md-12">
+                    <p>{{errorMessage}}</p>
                     <button type="sumbit" class="btn btn-success" [disabled]="!loginForm.valid">Login</button>
                     <button type="button" class="btn btn-primery" (click)="onRegister()">Register</button>
                 </div>
