--- a/client/src/app/products/product-list/add-product-list.component.html
+++ b/client/src/app/products/product-list/add-product-list.component.html
@@ -14,20 +14,23 @@
             <div class="col-xs-6">
               <div class="form-group">
                 <label for="imagePath">Image URL</label>
-                <input type="text" id="imagePath" class="form-control" formControlName="imagePath" #imagePath>
+                <input type="file" id="imagePath" class="form-control" (change)="onFileChange($event)" #imagePath>
               </div>
             </div>
           </div>
           <div class="row">
             <div class="col-xs-6 pull-right">
               <div class="form-group">
+                <p>
+                  {{imagePath.value}}
+                </p>
                 <img [src]="imagePath.value" alt="" class="img-responsive imgStyle">
               </div>
             </div>
             <div class="col-xs-6">
               <div class="form-group">
                 <label for="price">Price</label>
-                <input type="number" id="price" class="form-control" formControlName="price">
+                <input type="number" id="price" class="form-control" formControlName="price" min="1">
               </div>
             </div>
             <!-- </div>
