adding finish order popup

--- a/client/src/app/header/header.component.html
+++ b/client/src/app/header/header.component.html
@@ -10,7 +10,7 @@
               <li class="logoutBtn" routerLinkActive="active"><a (click)="onLogout()">Logout</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-             <li>{{userEmail}}</li>
+             <li class="navbar-text">{{userEmail}}</li>
           </ul>
       </div>
   </div>
