--- a/client/src/app/order/order.component.css
+++ b/client/src/app/order/order.component.css
@@ -5,3 +5,24 @@
 .titleStyle{
     display: inline-flex;
 }
+.btnStyle{
+    box-shadow: inset 0px 1px 0px 0px #ffffff;
+    background-color: #fcfcfc;
+    border-radius: 6px;
+    border: 1px solid #dcdcdc;
+    display: inline-block;
+    cursor: pointer;
+    color: #777777;
+    font-family: Arial;
+    font-size: 15px;
+    font-weight: bold;
+    padding: 6px 24px;
+    text-decoration: none;
+    text-shadow: 0px 1px 0px #ffffff;
+}
+.greetingStyle{
+    text-align: center;
+}
+.inputsStyle{
+    text-align: center;
+}
