--- a/client/src/app/products/product-list/add-product-list.component.html
+++ b/client/src/app/products/product-list/add-product-list.component.html
@@ -21,10 +21,7 @@
           <div class="row">
             <div class="col-xs-6 pull-right">
               <div class="form-group">
-                <p>
-                  {{imagePath.value}}
-                </p>
-                <img [src]="imagePath.value" alt="" class="img-responsive imgStyle">
+                <img [src]="imagePreview" alt="" class="img-responsive imgStyle">
               </div>
             </div>
             <div class="col-xs-6">
@@ -33,8 +30,6 @@
                 <input type="number" id="price" class="form-control" formControlName="price" min="1">
               </div>
             </div>
-            <!-- </div>
-          <div class="row"> -->
             <div class="col-xs-6">
               <div class="form-group">
                 <div *ngIf="current.name == 'General'">
@@ -57,10 +52,5 @@
         </form>
       </div>
     </div>
-    <!-- <input matInput tabindex="1" [(ngModel)]="data.animal"> -->
   </mat-form-field>
-</div>
-<div mat-dialog-actions>
-  <!-- <button mat-button (click)="onNoClick()">No Thanks</button> -->
-  <!-- <button mat-button [mat-dialog-close]="data.animal" cdkFocusInitial>Ok</button> -->
 </div>
