adding recite and fix bugs

--- a/client/src/app/header/header.component.html
+++ b/client/src/app/header/header.component.html
@@ -5,7 +5,7 @@
       </div>
       <div>
           <ul class="nav navbar-nav">
-              <li routerLinkActive="active"><a routerLink="/search">Search</a></li>
+              <!-- <li routerLinkActive="active"><a routerLink="/search">Search</a></li> -->
               <li routerLinkActive="active"><a routerLink="/shopping-main">Products</a></li>
               <li class="logoutBtn" routerLinkActive="active"><a (click)="onLogout()">Logout</a></li>
           </ul>
