--- a/client/src/app/products/cart/cart.component.scss
+++ b/client/src/app/products/cart/cart.component.scss
@@ -29,6 +29,7 @@
     background-color: rgba(black,0.4);
     text-align: center;
     border-radius: 4px;
+    margin: 0px;
 }
 .listStyle{
     padding: 6px 9px;
