--- a/client/src/app/products/product-list/add-product-to-cart.component.html
+++ b/client/src/app/products/product-list/add-product-to-cart.component.html
@@ -10,7 +10,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <p>
-                    <b>Product Price:</b> {{product.price*amount.value}}</p>
+                    <b>Product Price:</b> {{product.price}}</p>
             </div>
         </div>
         <div class="row">
